--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,13 +9,14 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": "2015",
+    "ecmaVersion": 2015,
     "sourceType": "module"
   },
   "plugins": ["react", "prettier", "jsx-a11y"],
   "rules": {
     "prettier/prettier": "error",
     "react/jsx-filename-extension": ["warn", {"extensions": ["jsx", ".js"]}],
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
